
Hardcode:
 * global_eval_context has been removed. The BQUE, EVAL_CONTEXT and PE_Info
   structs have been removed, replaced with MQUE and NEW_PE_INFO. Shouldn't
   affect players, but will affect hardcode hacks. See HACKING.184 for more
   info. [MG]
 * Q-registers are now kept in a PE_REGS stack. See HACKING.184 for more
   information. This will be used for other registers. [GM]
 * Renamed some variables in COMMAND() definitions for consistency/clarity.
   See HACKING.184 for more info. [MG]
 
Commands:
 * 'teach' now takes a /list switch, which lets it run an action list
   instead of a single command. [MG]
 * @force, @switch and @hook/override now all take an /inline switch, which
   can be further modified with /clearregs, /localize and /nobreak to run
   their actionlists without queueing (replaces /inplace). @include also
   takes those three switches. See the help for more info. [MG]
 * @retry, which causes a queue entry to restart from the beginning. Useful
   for coding loops without the queue delay. [GM]
   
Substitutions:
 * New %= substitution, which evaluates to the dbref/attribute currently
   being evaluated. Useful for coding things which loop. [MG]

Attributes:
 * Branch attributes now show the 'branch' attribute flag in lflags(). [MG]
 
Functions:
 * setq(), regmatch(), strmatch() and sql() accept q-register names of
   more than one character. [GM]
 * unsetq() now accepts patterns of q-register names. [GM]
 * listq() lists q-registers available to r(), optionally limited to those
   matching a pattern. [GM]

Fixes:
 * round() would sometimes return a number with a decimal point but no
   digits after it, like "5.". Reported by Minion. [MG]
 * sortby() and foreach() now use call_ufun in the hardcode, fixing a number
   of minor bugs. [MG]
 * rand(-X, -Y) where -X > -Y was broken. [SW]
 * Fix a couple of minor memory leaks. [SW]
 * Possible crashbug in switch(), @switch, iter() and @dolist fixed. [MG]
