@@ -29,6 +29,7 @@ Hardcode:
    info. [MG]
  * Q-registers are now kept in a PE_REGS stack. See HACKING.184 for more
    information. This will be used for other registers. [GM]
+ * Regexp information ($1, $<foo>) are now kept in the PE_REGS stack. [GM]
  * Renamed some variables in COMMAND() definitions for consistency/clarity.
    See HACKING.184 for more info. [MG]
  
